@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2023 Universidade do Porto - Faculdade de Engenharia
+ * Copyright (c) 2004-2026 Universidade do Porto - Faculdade de Engenharia
  * Laboratório de Sistemas e Tecnologia Subaquática (LSTS)
  * All rights reserved.
  * Rua Dr. Roberto Frias s/n, sala I203, 4200-465 Porto, Portugal
@@ -36,16 +36,18 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
-import java.nio.charset.Charset;
-import java.security.NoSuchAlgorithmException;
+import java.nio.charset.StandardCharsets;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Properties;
-import java.util.Vector;
+import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
@@ -53,6 +55,7 @@ import java.util.concurrent.TimeoutException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import javax.mail.AuthenticationFailedException;
 import javax.mail.BodyPart;
 import javax.mail.Folder;
 import javax.mail.Message;
@@ -61,25 +64,15 @@ import javax.mail.NoSuchProviderException;
 import javax.mail.Session;
 import javax.mail.Store;
 import javax.mail.internet.MimeMultipart;
-import javax.net.ssl.SSLContext;
 import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.codec.binary.StringUtils;
 import org.apache.commons.io.IOUtils;
-import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpPost;
-import org.apache.http.config.Registry;
-import org.apache.http.config.RegistryBuilder;
-import org.apache.http.conn.socket.ConnectionSocketFactory;
-import org.apache.http.conn.socket.PlainConnectionSocketFactory;
-import org.apache.http.conn.ssl.NoopHostnameVerifier;
-import org.apache.http.conn.ssl.SSLConnectionSocketFactory;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClients;
-import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
+import org.apache.http.client.protocol.HttpClientContext;
 import org.apache.http.message.BasicNameValuePair;
 
 import pt.lsts.neptus.NeptusLog;
@@ -93,21 +86,30 @@ import pt.lsts.neptus.types.vehicle.VehiclesHolder;
 import pt.lsts.neptus.util.ByteUtil;
 import pt.lsts.neptus.util.GuiUtils;
 import pt.lsts.neptus.util.conf.ConfigFetch;
+import pt.lsts.neptus.util.conf.GeneralPreferences;
+import pt.lsts.neptus.util.http.client.HttpClientConnectionHelper;
+
+import static pt.lsts.neptus.comm.iridium.HubIridiumMessenger.updateVehicleWithLastSeenImei;
 
 /**
  * This class uses the RockBlock HTTP API (directly) to send messages to Iridium destinations and a gmail inbox to poll
  * for incoming messages
  * 
- * @see http://rockblock.rock7mobile.com/downloads/RockBLOCK-Web-Services-User-Guide.pdf
+ * @see https://www.groundcontrol.com/wp-content/uploads/2022/02/RockBLOCK-Web-Services-User-Guide.pdf
  * @author zp
  */
 @IridiumProvider(id="rock7", name="RockBlock Messenger", description="Sends Iridium messages directly via RockBlock web service and receives new messages by polling a gmail address")
 public class RockBlockIridiumMessenger implements IridiumMessenger {
 
+    protected HttpClientConnectionHelper httpComm;
+
     protected boolean available = true;
-    protected static String serverUrl = "https://core.rock7.com/rockblock/MT";
-    protected HashSet<IridiumMessageListener> listeners = new HashSet<>();
+    protected static String serverUrl = "https://secure.rock7mobile.com/rockblock/MT";
+    protected Set<IridiumMessageListener> listeners = new HashSet<>();
     private static long lastSuccess = -1;
+
+    private final Pattern patternText = Pattern.compile("TEXT/PLAIN; charset=([a-zA-Z0-9-]+)");
+    private final Pattern patternAttach = Pattern.compile("APPLICATION/OCTET-STREAM; name=(\\d+)-(\\d+)\\.bin");
 
     @NeptusProperty
     private boolean alwaysAskForPassword = false;
@@ -130,13 +132,20 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
     private boolean askRockBlockPassword = true;
     private boolean askGmailPassword = true;
 
+    public static final String CONF_ROCKBLOCK_PROPS = ".cache/rockblock.props";
+
     {
         try {
-            PluginUtils.loadProperties("conf/rockblock.props", this);
+            PluginUtils.loadProperties(CONF_ROCKBLOCK_PROPS, this);
         }
         catch (Exception e) {
         }
         askGmailPassword = askRockBlockPassword = alwaysAskForPassword;
+
+        httpComm = new HttpClientConnectionHelper(HttpClientConnectionHelper.MAX_TOTAL_CONNECTIONS,
+                HttpClientConnectionHelper.DEFAULT_MAX_CONNECTIONS_PER_ROUTE, 1000, true);
+        httpComm.setRegistryNoHostNameVerifier();
+        httpComm.initializeComm();
     }
 
     private String getRockBlockUsername() {
@@ -155,7 +164,7 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
         if (password == null)
             this.rockBlockPassword = null;
 
-        this.rockBlockPassword = DatatypeConverter.printBase64Binary(password.getBytes(Charset.forName("UTF8")));
+        this.rockBlockPassword = DatatypeConverter.printBase64Binary(password.getBytes(StandardCharsets.UTF_8));
     }
 
     private void setRockBlockUsername(String username) {
@@ -180,13 +189,38 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
         if (password == null)
             this.gmailPassword = null;
 
-        this.gmailPassword = DatatypeConverter.printBase64Binary(password.getBytes(Charset.forName("UTF8")));
+        this.gmailPassword = DatatypeConverter.printBase64Binary(password.getBytes(StandardCharsets.UTF_8));
     }
 
     private void setGmailUsername(String username) {
         if (username == null)
             this.gmailUsername = null;
         this.gmailUsername = username;
+    }
+
+    private boolean askCredentials() throws IOException {
+        if (askRockBlockPassword || rockBlockPassword == null || rockBlockUsername == null) {
+            Pair<String, String> credentials = GuiUtils.askCredentials(ConfigFetch.getSuperParentFrame(),
+                    "Enter RockBlock Credentials", getRockBlockUsername(), getRockBlockPassword());
+            if (credentials == null)
+                return true;
+            setRockBlockUsername(credentials.first());
+            setRockBlockPassword(credentials.second());
+            PluginUtils.saveProperties(CONF_ROCKBLOCK_PROPS, this);
+            askRockBlockPassword = false;
+        }
+        return false;
+    }
+
+    private void checkResponseFromServer(String result) throws Exception {
+        if (!result.split(",")[0].equals("OK")) {
+            String[] errorCode = result.split(",");
+            if (errorCode[0].equalsIgnoreCase("FAILED") && errorCode[1].equalsIgnoreCase("10")) {
+                // 'FAILED,10,Invalid login credentials'
+                askRockBlockPassword = true;
+            }
+            throw new Exception("RockBlock server failed to deliver the message: '" + result + "'");
+        }
     }
 
     @Override
@@ -196,54 +230,55 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
             throw new Exception("Cannot send message to an unknown destination");
         }
         IridiumArgs args = (IridiumArgs) vt.getProtocolsArgs().get("iridium");
-        if (askRockBlockPassword || rockBlockPassword == null || rockBlockUsername == null) {
-            Pair<String, String> credentials = GuiUtils.askCredentials(ConfigFetch.getSuperParentFrame(),
-                    "Enter RockBlock Credentials", getRockBlockUsername(), getRockBlockPassword());
-            if (credentials == null)
-                return;
-            setRockBlockUsername(credentials.first());
-            setRockBlockPassword(credentials.second());
-            PluginUtils.saveProperties("conf/rockblock.props", this);
-            askRockBlockPassword = false;
-        }
-        
-        String result = sendToRockBlockHttp(args.getImei(), getRockBlockUsername(), getRockBlockPassword(),
-                msg.serialize());
 
-        if (result != null) {
-            if (!result.split(",")[0].equals("OK")) {
-                throw new Exception("RockBlock server failed to deliver the message: '" + result + "'");
+        if (askCredentials())
+            return;
+
+        String destImei = getImeiToUse(args);
+        String result = sendToRockBlockHttp(destImei, getRockBlockUsername(), getRockBlockPassword(),
+                msg.serialize());
+        checkResponseFromServer(result);
+    }
+
+    @Override
+    public void sendMessageRaw(String destinationName, String imeiAddr, byte[] data) throws Exception {
+        if (imeiAddr == null || imeiAddr.trim().isEmpty()) {
+            VehicleType vt = VehiclesHolder.getVehicleById(destinationName);
+            if (vt == null) {
+                throw new Exception("Cannot send message to an unknown destination");
+            }
+            IridiumArgs args = (IridiumArgs) vt.getProtocolsArgs().get("iridium");
+            imeiAddr = getImeiToUse(args);
+        }
+
+        if (askCredentials()) {
+            return;
+        }
+
+        String result = sendToRockBlockHttp(imeiAddr, getRockBlockUsername(), getRockBlockPassword(), data);
+        checkResponseFromServer(result);
+    }
+
+    private static String getImeiToUse(IridiumArgs args) {
+        String destImei = args.getLastSeenImei();
+        int imeiIdx = GeneralPreferences.iridiumModemDefaultIndexToUse;
+        if (imeiIdx > 0) {
+            switch (imeiIdx) {
+                case 1:
+                    destImei = args.getImei();
+                    break;
+                case 2:
+                default:
+                    destImei = args.getImei1();
             }
         }
-    }
-
-    static final SSLConnectionSocketFactory sslsf;
-    static final Registry<ConnectionSocketFactory> registry;
-    static final PoolingHttpClientConnectionManager cm;
-    static {
-        try {
-            sslsf = new SSLConnectionSocketFactory(SSLContext.getDefault(),
-                    NoopHostnameVerifier.INSTANCE);
-        } catch (NoSuchAlgorithmException e) {
-            throw new RuntimeException(e);
-        }
-
-        registry = RegistryBuilder.<ConnectionSocketFactory>create()
-                .register("http", new PlainConnectionSocketFactory())
-                .register("https", sslsf)
-                .build();
-        cm = new PoolingHttpClientConnectionManager(registry);
-        cm.setMaxTotal(100);
+        return destImei;
     }
     
-    public static String sendToRockBlockHttp(String destImei, String username, String password, byte[] data)
+    public String sendToRockBlockHttp(String destImei, String username, String password, byte[] data)
             throws IOException {
 
-        try (CloseableHttpClient client = HttpClients.custom()
-                .setSSLSocketFactory(sslsf)
-                .setConnectionManager(cm)
-                .build()) {
-
+        try {
             HttpPost post = new HttpPost(serverUrl);
             List<NameValuePair> urlParameters = new ArrayList<NameValuePair>();
             urlParameters.add(new BasicNameValuePair("imei", destImei));
@@ -253,7 +288,11 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
 
             post.setEntity(new UrlEncodedFormEntity(urlParameters));
             post.setHeader("Content-Type", "application/x-www-form-urlencoded");
-            try (CloseableHttpResponse response = client.execute(post);) {
+
+            HttpClientContext context = HttpClientContext.create();
+            try (CloseableHttpResponse response = httpComm.getClient().execute(post, context)) {
+                httpComm.autenticateProxyIfNeeded(response, context);
+
                 BufferedReader rd = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
 
                 StringBuffer result = new StringBuffer();
@@ -264,6 +303,7 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
                 return result.toString();
             }
             catch (Exception e) {
+                e.printStackTrace();
                 throw e;
             }
         }
@@ -272,28 +312,27 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
         }
     }
 
-    private Pattern pattern = Pattern.compile("APPLICATION/OCTET-STREAM; name=(\\d+)-(\\d+)\\.bin");
-
     @Override
     public Collection<IridiumMessage> pollMessages(Date timeSince) throws Exception {
 
-        if (askGmailPassword || gmailPassword == null || gmailUsername == null) {
+        if (askGmailPassword || gmailPassword == null || gmailPassword.isEmpty() || gmailUsername == null || gmailUsername.isEmpty()) {
             Pair<String, String> credentials = GuiUtils.askCredentials(ConfigFetch.getSuperParentFrame(),
                     "Enter Gmail Credentials", getGmailUsername(), getGmailPassword());
             if (credentials == null)
                 return null;
             setGmailUsername(credentials.first());
             setGmailPassword(credentials.second());
-            PluginUtils.saveProperties("conf/rockblock.props", this);
+            PluginUtils.saveProperties(CONF_ROCKBLOCK_PROPS, this);
             askGmailPassword = false;
         }
 
         Properties props = new Properties();
         props.put("mail.store.protocol", "imaps");
         ArrayList<IridiumMessage> messages = new ArrayList<>();
+        Store store = null;
         try {
             Session session = Session.getDefaultInstance(props, null);
-            Store store = session.getStore("imaps");
+            store = session.getStore("imaps");
             store.connect("imap.gmail.com", getGmailUsername(), getGmailPassword());
 
             Folder inbox = store.getFolder("Inbox");
@@ -302,40 +341,132 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
 
             for (int i = numMsgs; i > 0; i--) {
                 Message m = inbox.getMessage(i);
-                if (m.getReceivedDate().before(timeSince)) {
+                Date transmiteDate = null;
+                String fromImei = "";
+                String seqNumber = "";
+                byte[] data = null;
+                if (!m.getReceivedDate().after(timeSince)) {
                     break;
                 }
-                else {
-                    MimeMultipart mime = (MimeMultipart) m.getContent();
-                    for (int j = 0; j < mime.getCount(); j++) {
-                        BodyPart p = mime.getBodyPart(j);
-                        Matcher matcher = pattern.matcher(p.getContentType());
-                        if (matcher.matches()) {
-                            InputStream stream = (InputStream) p.getContent();
-                            byte[] data = IOUtils.toByteArray(stream);
-                            IridiumMessage msg = process(data, matcher.group(1));
-                            if (msg != null)
-                                messages.add(msg);
+
+                if (m.getContent() instanceof String) {
+                    // No attach data so empty msg
+                    String text = (String) m.getContent();
+                    String[] partsList = text.split("\n");
+                    for (String prt : partsList) {
+                        if (prt.trim().isEmpty())
+                            continue;
+                        prt = prt.trim();
+                        if (prt.startsWith("Transmit Time:")) {
+                            String trmTime = prt.split("e: ")[1].trim();
+                            transmiteDate = getTransmitDateToDate(trmTime);
+                        } else if (prt.startsWith("IMEI:")) {
+                            fromImei = prt.split(":")[1].trim();
+                        } else if (prt.startsWith("MOMSN:")) {
+                            seqNumber = prt.split(":")[1].trim();
                         }
                     }
                 }
+                else if (m.getContent() instanceof MimeMultipart) {
+                    MimeMultipart mime = (MimeMultipart) m.getContent();
+                    for (int j = 0; j < mime.getCount(); j++) {
+                        BodyPart p = mime.getBodyPart(j);
+                        Matcher matcher = patternText.matcher(p.getContentType());
+                        if (matcher.matches()) {
+                            String text = (String) p.getContent();
+                            String[] partsList = text.split("\n");
+                            for (String prt : partsList) {
+                                if (prt.trim().isEmpty())
+                                    continue;
+                                prt = prt.trim();
+                                if (prt.startsWith("Transmit Time:")) {
+                                    String trmTime = prt.split("e: ")[1].trim();
+                                    transmiteDate = getTransmitDateToDate(trmTime);
+                                } else if (prt.startsWith("IMEI:")) {
+                                    fromImei = prt.split(":")[1].trim();
+                                } else if (prt.startsWith("MOMSN:")) {
+                                    seqNumber = prt.split(":")[1].trim();
+                                }
+                            }
+                            continue;
+                        }
+                        matcher = patternAttach.matcher(p.getContentType());
+                        if (matcher.matches()) {
+                            InputStream stream = (InputStream) p.getContent();
+                            data = IOUtils.toByteArray(stream);
+                            fromImei = matcher.group(1);
+                            seqNumber = matcher.group(2);
+                        }
+                    }
+                }
+
+                if (fromImei == null || fromImei.isEmpty())
+                    continue;
+                IridiumMessage msg = process(data, fromImei, seqNumber,
+                        transmiteDate != null ? transmiteDate
+                                : (m.getSentDate() == null ? m.getReceivedDate() : m.getSentDate()));
+                if (msg != null)
+                    messages.add(msg);
             }
+        }
+        catch (AuthenticationFailedException ex) {
+            askGmailPassword = true;
+            ex.printStackTrace();
+            return new ArrayList<>();
         }
         catch (NoSuchProviderException ex) {
             ex.printStackTrace();
-            return new Vector<>();
+            return new ArrayList<>();
         }
         catch (MessagingException ex) {
             ex.printStackTrace();
-            return new Vector<>();
+            return new ArrayList<>();
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+            return new ArrayList<>();
+        } finally {
+            try {
+                if (store != null)
+                    store.close();
+            }
+            catch (Exception e) {
+                e.printStackTrace();
+            }
+            store = null;
         }
 
+        messages.sort((m1, m2) -> Long.compare(m1.timestampMillis, m2.timestampMillis));
         return messages;
     }
 
-    private IridiumMessage process(byte[] data, String from) {
+    private static Date getTransmitDateToDate(String trmTime) {
+        // Parse date in format: 2025-01-20T14:16:03Z UTC
+        trmTime = trmTime.replaceFirst(" UTC", "");
+        DateTimeFormatter formatter = DateTimeFormatter.ISO_ZONED_DATE_TIME;
+        ZonedDateTime dateTime = ZonedDateTime.parse(trmTime, formatter);
+        return Date.from(dateTime.toInstant());
+    }
+
+    private IridiumMessage process(byte[] data, String fromImei, String seqNumber, Date sentDate) {
         try {
-            return IridiumMessage.deserialize(data);
+            updateVehicleWithLastSeenImei(fromImei, sentDate);
+            if (data == null || data.length == 0)
+                return null;
+
+            Date now = new Date();
+            IridiumMessage irMsg = IridiumMessage.deserialize(data);
+            if (irMsg.source == ImcId16.NULL_ID.intValue()) {
+                // Let us try to fill the source from imei
+                irMsg.source = HubIridiumMessenger.HubMessage.findSystemIdByImei(fromImei);
+            }
+
+            // If not set, set the timestamp
+            if (!new Date(irMsg.timestampMillis).before(now) && sentDate != null) {
+                irMsg.timestampMillis = sentDate.getTime();
+            }
+
+            return irMsg;
         }
         catch (Exception e){
             e.printStackTrace();
@@ -371,38 +502,48 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
 
     @Override
     public void cleanup() {
-        // TODO Auto-generated method stub
-
+        httpComm.cleanUp();
     }
 
-    public static Future<Boolean> rockBlockIsReachable() {
-        return new Future<Boolean>() {
+
+    private static Future<Boolean> lastSuccessFuture = null;
+    private static synchronized Future<Boolean> currentRockBlockIsReachable() {
+        if (lastSuccessFuture != null && !lastSuccessFuture.isDone()) {
+            return lastSuccessFuture;
+        }
+
+        lastSuccessFuture = new Future<Boolean>() {
             Boolean result = null;
             boolean canceled = false;
             long start = System.currentTimeMillis();
             {
-
                 if (System.currentTimeMillis() - lastSuccess < 15000) {
                     result = true;
                 }
 
-                try {
-                    URL url = new URL("https://secure.rock7mobile.com/rockblock");
-                    int len = url.openConnection().getContentLength();
-                    if (len > 0)
-                        lastSuccess = System.currentTimeMillis();
-                    result = len > 0;
-                }
-                catch (Exception e) {
-                    NeptusLog.pub().error(e);
-                    result = false;
+                if (result == null) {
+                    try {
+                        URL url = new URI("http://secure.rock7mobile.com/rockblock").toURL();
+                        NeptusLog.pub().info("Checking RockBlock server at {}", url);
+                        int len = url.openConnection().getContentLength();
+                        if (len > 0) {
+                            lastSuccess = System.currentTimeMillis();
+                        }
+                        result = len > 0;
+                        NeptusLog.pub().info("RockBlock server is {}reachable", result ? "" : "NOT ");
+                    }
+                    catch (Exception e) {
+                        NeptusLog.pub().error(e);
+                        result = false;
+                    }
                 }
             }
 
             @Override
             public Boolean get() throws InterruptedException, ExecutionException {
                 while (result == null) {
-                    Thread.sleep(100);
+                    //Thread.sleep(100);
+                    Thread.yield();
                 }
                 return result;
             }
@@ -417,7 +558,8 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
             public Boolean get(long timeout, TimeUnit unit) throws InterruptedException, ExecutionException,
                     TimeoutException {
                 while (result == null) {
-                    Thread.sleep(100);
+                    //Thread.sleep(100);
+                    Thread.yield();
                     if (System.currentTimeMillis() - start > unit.toMillis(timeout))
                         throw new TimeoutException("Time out while connecting");
                 }
@@ -434,6 +576,12 @@ public class RockBlockIridiumMessenger implements IridiumMessenger {
                 return result != null;
             }
         };
+
+        return lastSuccessFuture;
+    }
+
+    public static Future<Boolean> rockBlockIsReachable() {
+        return currentRockBlockIsReachable();
     }
     
     @Override
